2006-03-06  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/java/net/protocol/http/HTTPURLConnection.java: Organized imports.
	(getRequestProperty): Remove duplicated null check.
	* java/net/URLConnection.java: 
	(URLConnection): Javadoc fix.
	(addRequestProperty): Likewise.
	(getDefaultRequestProperty): Likewise.
	(getHeaderField): Likewise.
	(getHeaderFieldDate): Likewise.
	(getHeaderFieldKey): Likewise.
	(getHeaderFields): Likewise.
	(getRequestProperties): Likewise.
	(getRequestProperty): Likewise.
	(setDefaultRequestProperty): Likewise.
	(setRequestProperty): Likewise.

2006-03-06  Tom Tromey  <tromey@redhat.com>

	* javax/swing/plaf/synth/Region.java (FILE_CHOOSER): Renamed.
	(FORMATTED_TEXT_FIELD): Likewise.

2006-03-06  Tom Tromey  <tromey@redhat.com>

	* javax/swing/plaf/synth/SynthPainter.java: Finished.

2006-03-06  Mark Wielaard  <mark@klomp.org>

	Fixes bug #26568 reported by Paul Jenner <psj@harker.dyndns.org>
	* native/fdlibm/fdlibm.h (__ieee754_rem_pio2): Return an int32_t.
	(isnan): Define explicitly isnan if it is not a macro.

2006-03-06  Anthony Balkissoon  <abalkiss@redhat.com>

	* NEWS: Fixed typo.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* examples/gnu/classpath/examples/swing/Demo.java:
	(mkMenuBar): Added menu entry that will display the VM's name,
	version and distributor.

2006-03-06  Tom Tromey  <tromey@redhat.com>

	* javax/swing/plaf/synth/SynthLookAndFeel.java (getDescription): 
	Javadoc fix.
	(getName): Likewise.

2006-03-06  Mark Wielaard  <mark@klomp.org>

	* configure.ac (VERSION): Set to 0.91-pre.
	* NEWS: Add updates for 0.90 release.

2006-03-06  Robert Schuster  <robertschuster@fsfe.org>

	* javax/swing/text/PlainDocument.java: Fix copyright header,
	added author tags.
	(insertUpdate): Do not copy the whole document any more, added some
	more variables to prevent needless method calls.

2006-03-06  Christian Thalinger <twisti@complang.tuwien.ac.at>

	* configure.ac: Check for FREETYPE2.  This is a reverted patch and